More rigid tetration parameters inheritance, tried to add a generic Math.pow workaround. Java is already too limited. ASM is in plans