@@ -29,6 +29,18 @@
       <version>1.14.0</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -54,6 +66,7 @@
             <configuration>
                 <source>25</source>
                 <target>25</target>
+                <compilerArgs>--enable-preview</compilerArgs>
             </configuration>
         </plugin>
     </plugins>
